--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,6 @@
 #Broadcast插件配置文件
-
-#公告的前缀,显示在公告具体内容之前,如果要使用彩色代码,应当用§
+#对应版本1.6
+#公告的前缀,显示在公告具体内容之前,支持彩色代码
 Prefix: '§3[公告]'
 #公告内容
 BroadcastContent:
